[gd_scene load_steps=5 format=4 uid="uid://fsjucv7srfah"]

[ext_resource type="Script" path="res://Scripts/GridMovement/cursor.gd" id="1_kfo20"]
[ext_resource type="Texture2D" uid="uid://cixla54dv4vw4" path="res://Sprites/GridMovement/tilemap_packed.png" id="2_ix2bh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_by1it"]
texture = ExtResource("2_ix2bh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0

[sub_resource type="TileSet" id="TileSet_wsa28"]
sources/0 = SubResource("TileSetAtlasSource_by1it")

[node name="GridMovement" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(80, 72)
position_smoothing_enabled = true
position_smoothing_speed = 16.0

[node name="Cursor" type="Node2D" parent="."]
z_index = 1
script = ExtResource("1_kfo20")

[node name="BoxCursor" type="Sprite2D" parent="Cursor"]
texture = ExtResource("2_ix2bh")
region_enabled = true
region_rect = Rect2(112, 48, 16, 16)

[node name="HoldTimer" type="Timer" parent="Cursor"]
wait_time = 0.3
one_shot = true

[node name="RepeatMoveTimer" type="Timer" parent="Cursor"]
wait_time = 0.05
one_shot = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAADAAMAAAACAAUAAAADAAQAAAACAAIAAAADAAUAAAACAAIAAAADAAYAAAACAAIAAAADAAcAAAACAAIAAAADAAgAAAABAAUAAAAEAAMAAAABAAMAAAAEAAQAAAACAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAABAAAAAAAFAAMAAAABAAMAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAMAAAABAAMAAAAGAAQAAAAAAAAAAAAGAAUAAAABAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAMAAAABAAMAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAACAAAAAAAHAAcAAAABAAAAAAAIAAMAAAADAAUAAAAIAAQAAAAAAAIAAAAIAAUAAAAAAAIAAAAIAAYAAAAAAAIAAAAIAAcAAAAAAAIAAAAIAAgAAAAAAAUAAAAAAAAAAAACAAUAAAAAAAEAAAACAAIAAAAAAAIAAAABAAUAAAAAAAMAAAABAAIAAAAAAAQAAAABAAIAAAAAAAUAAAABAAIAAAAAAAYAAAABAAIAAAAAAAcAAAABAAIAAAAAAAgAAAABAAIAAAABAAgAAAABAAIAAAABAAcAAAABAAIAAAABAAYAAAABAAIAAAABAAUAAAABAAIAAAABAAQAAAABAAIAAAABAAMAAAABAAIAAAABAAIAAAABAAEAAAABAAEAAAACAAAAAAABAAAAAAABAAMAAAACAAAAAAADAAUAAAACAAEAAAAAAAIAAAACAAIAAAAAAAUAAAACAAMAAAABAAIAAAACAAQAAAABAAIAAAACAAUAAAABAAIAAAACAAYAAAABAAIAAAACAAcAAAABAAIAAAACAAgAAAABAAIAAAADAAIAAAABAAIAAAADAAEAAAABAAIAAAADAAAAAAABAAIAAAAEAAAAAAABAAIAAAAEAAEAAAABAAIAAAAEAAIAAAABAAIAAAAFAAIAAAABAAIAAAAFAAEAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAGAAEAAAABAAIAAAAGAAIAAAABAAIAAAAHAAIAAAABAAIAAAAHAAEAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAIAAEAAAABAAIAAAAIAAIAAAABAAIAAAAAAAkAAAABAAIAAAAAAAoAAAABAAIAAAAAAAsAAAABAAIAAAAAAAwAAAABAAIAAAABAAwAAAABAAIAAAACAAwAAAABAAIAAAADAAwAAAABAAUAAAAEAAwAAAABAAEAAAAFAAwAAAABAAEAAAAGAAwAAAABAAEAAAAHAAwAAAABAAEAAAAIAAwAAAABAAEAAAAJAAwAAAACAAEAAAAKAAwAAAAAAAAAAAALAAwAAAABAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAoAAAACAAAAAAAMAAkAAAACAAAAAAALAAkAAAACAAAAAAAKAAkAAAAAAAAAAAAJAAkAAAACAAMAAAAIAAkAAAABAAMAAAAHAAkAAAABAAMAAAADAAkAAAACAAUAAAADAAoAAAACAAIAAAACAAoAAAABAAIAAAABAAoAAAABAAIAAAABAAsAAAABAAIAAAACAAsAAAABAAIAAAADAAsAAAACAAIAAAAEAAsAAAAAAAAAAAAFAAsAAAACAAAAAAAFAAoAAAAAAAAAAAAEAAoAAAABAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAABAAAAAAAIAAoAAAABAAAAAAAHAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAKAAsAAAACAAAAAAALAAoAAAACAAAAAAAKAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAACAAkAAAABAAIAAAABAAkAAAABAAIAAAAMAAwAAAAAAAAAAAAMAAgAAAABAAAAAAAMAAcAAAAAAAAAAAAMAAYAAAABAAAAAAAMAAUAAAAAAAAAAAAMAAQAAAABAAMAAAAMAAMAAAABAAIAAAAMAAIAAAABAAIAAAAMAAEAAAABAAIAAAAMAAAAAAABAAIAAAALAAAAAAABAAIAAAAKAAAAAAABAAIAAAAKAAEAAAABAAIAAAAJAAEAAAABAAIAAAAJAAIAAAABAAIAAAAJAAMAAAABAAIAAAAJAAQAAAACAAUAAAAJAAUAAAACAAIAAAAJAAYAAAACAAIAAAAJAAcAAAACAAIAAAAJAAgAAAACAAIAAAAKAAgAAAABAAAAAAAKAAcAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAQAAAABAAMAAAAKAAMAAAABAAIAAAAKAAIAAAABAAIAAAALAAIAAAABAAIAAAALAAEAAAABAAIAAAALAAMAAAABAAIAAAALAAQAAAABAAMAAAALAAUAAAABAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAAJAAAAAAABAAIAAAAFAAkAAAABAAMAAAAEAAkAAAABAAMAAAAGAAkAAAABAAMAAAAHAAgAAAABAAEAAAAGAAgAAAABAAEAAAAFAAgAAAABAAEAAAAEAAgAAAABAAEAAAANAAQAAAABAAMAAAAOAAQAAAABAAMAAAAJAA0AAAACAAIAAAAJAA4AAAACAAIAAAAJAA8AAAABAAUAAAAKAA8AAAABAAEAAAALAA8AAAABAAEAAAAMAA8AAAABAAEAAAANAA8AAAABAAEAAAAPAAUAAAAAAAIAAAAPAAYAAAAAAAIAAAAPAAcAAAAAAAIAAAAPAAgAAAAAAAIAAAAPAAkAAAAAAAIAAAAPAAoAAAAAAAIAAAAPAAsAAAAAAAIAAAAPAAwAAAAAAAIAAAAPAA0AAAAAAAIAAAAPAA4AAAAAAAIAAAAOAA8AAAABAAEAAAAPAA8AAAAAAAUAAAANAAoAAAAAAAAAAAANAAsAAAABAAAAAAAOAAsAAAAAAAAAAAALAA0AAAAAAAAAAAAKAA0AAAABAAAAAAAKAA4AAAAAAAAAAAALAA4AAAAAAAAAAAAMAA4AAAABAAAAAAANAA4AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA0AAAAAAAAAAAAOAAwAAAABAAAAAAAOAAoAAAAAAAAAAAAOAAkAAAABAAAAAAAOAAgAAAAAAAAAAAAOAAcAAAABAAAAAAAOAAYAAAAAAAAAAAANAAYAAAACAAAAAAANAAUAAAAAAAAAAAANAAgAAAAAAAAAAAANAAcAAAAAAAAAAAANAAkAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAACAAAAAAAMAA0AAAAAAAAAAAAOAAUAAAABAAAAAAAIAA0AAAABAAIAAAAHAA0AAAABAAIAAAAGAA0AAAABAAIAAAAFAA0AAAABAAIAAAAEAA0AAAABAAIAAAADAA0AAAABAAIAAAACAA0AAAABAAIAAAABAA0AAAABAAIAAAAAAA0AAAABAAIAAAAAAA4AAAABAAIAAAAAAA8AAAABAAIAAAABAA8AAAABAAIAAAACAA8AAAABAAIAAAADAA8AAAABAAIAAAAEAA8AAAABAAIAAAAFAA8AAAABAAIAAAAFAA4AAAABAAIAAAAGAA4AAAABAAIAAAAHAA4AAAABAAIAAAAIAA4AAAABAAIAAAAEAA4AAAABAAIAAAADAA4AAAABAAIAAAABABAAAAABAAIAAAAAABAAAAABAAIAAAAAABEAAAABAAIAAAABABEAAAABAAIAAAACABEAAAABAAIAAAADABEAAAABAAIAAAAEABEAAAABAAIAAAAFABEAAAABAAIAAAAGABEAAAABAAIAAAAHABEAAAABAAIAAAAHABAAAAABAAIAAAAHAA8AAAABAAIAAAAGABAAAAABAAIAAAAIAA8AAAABAAIAAAAIABAAAAABAAIAAAAIABEAAAABAAIAAAAFABAAAAABAAIAAAAEABAAAAABAAIAAAADABAAAAABAAIAAAACABAAAAABAAIAAAAGAA8AAAABAAIAAAACAA4AAAABAAIAAAABAA4AAAABAAIAAAAJABAAAAABAAIAAAAKABAAAAABAAIAAAALABAAAAABAAIAAAAMABAAAAABAAIAAAANABAAAAABAAIAAAAOABAAAAABAAIAAAAPABAAAAABAAIAAAAPABEAAAABAAIAAAAOABEAAAABAAIAAAANABEAAAABAAIAAAAMABEAAAABAAIAAAALABEAAAABAAIAAAAKABEAAAABAAIAAAAJABEAAAABAAIAAAAQABEAAAABAAIAAAARABEAAAABAAIAAAARABAAAAABAAIAAAAQABAAAAABAAIAAAAQAA8AAAABAAIAAAAQAA4AAAABAAIAAAARAA8AAAABAAIAAAARAA4AAAABAAIAAAARAA0AAAABAAIAAAARAAwAAAABAAIAAAARAAsAAAABAAIAAAARAAoAAAABAAIAAAARAAkAAAABAAIAAAARAAgAAAABAAIAAAARAAcAAAABAAIAAAASAAYAAAABAAIAAAARAAYAAAABAAIAAAAQAAgAAAABAAIAAAAQAAkAAAABAAIAAAAQAAoAAAABAAIAAAAQAAsAAAABAAIAAAAQAAwAAAABAAIAAAAQAA0AAAABAAIAAAAQAAcAAAABAAIAAAAQAAYAAAABAAIAAAAQAAUAAAABAAIAAAAQAAQAAAABAAIAAAAQAAMAAAABAAIAAAAQAAIAAAABAAIAAAAQAAEAAAABAAIAAAAQAAAAAAABAAIAAAAPAAAAAAABAAIAAAAOAAAAAAABAAIAAAANAAAAAAABAAIAAAANAAEAAAABAAIAAAAOAAEAAAABAAIAAAAOAAIAAAABAAIAAAAOAAMAAAABAAIAAAANAAMAAAABAAIAAAANAAIAAAABAAIAAAAPAAMAAAABAAIAAAAPAAQAAAADAAUAAAAPAAIAAAABAAIAAAAPAAEAAAABAAIAAAARAAAAAAABAAIAAAARAAEAAAABAAIAAAARAAIAAAABAAIAAAARAAMAAAABAAIAAAARAAQAAAABAAIAAAARAAUAAAABAAIAAAASAAUAAAABAAIAAAASAAQAAAABAAIAAAASAAMAAAABAAIAAAASAAIAAAABAAIAAAASAAEAAAABAAIAAAASAAAAAAABAAIAAAASAAcAAAABAAIAAAASAAgAAAABAAIAAAASAAkAAAABAAIAAAASAAoAAAABAAIAAAASAAsAAAABAAIAAAASAAwAAAABAAIAAAASAA0AAAABAAIAAAASAA4AAAABAAIAAAASAA8AAAABAAIAAAASABAAAAABAAIAAAASABEAAAABAAIAAAASABIAAAABAAIAAAARABIAAAABAAIAAAAQABIAAAABAAIAAAAPABIAAAABAAIAAAAOABIAAAABAAIAAAANABIAAAABAAIAAAAMABIAAAABAAIAAAALABIAAAABAAIAAAAKABIAAAABAAIAAAAJABIAAAABAAIAAAAIABIAAAABAAIAAAAHABIAAAABAAIAAAAGABIAAAABAAIAAAAFABIAAAABAAIAAAAEABIAAAABAAIAAAADABIAAAABAAIAAAACABIAAAABAAIAAAABABIAAAABAAIAAAAAABIAAAABAAIAAAA=")
tile_set = SubResource("TileSet_wsa28")

[connection signal="timeout" from="Cursor/HoldTimer" to="Cursor" method="_on_hold_timer_timeout"]
[connection signal="timeout" from="Cursor/RepeatMoveTimer" to="Cursor" method="_on_repeat_move_timer_timeout"]
